src/test/deca/context/invalid/new-int.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

{
    int a = new int();
}
